tests/NormalTests/paczka1/fuzzy1/57433047.err
Error in line 3: S316 S759 47,59
Error in line 4: P3qofspO S759 31,2
Error in line 18: P3qofspO A351 64,7
Error in line 11: RymHktMnM S316 61,2
Error in line 24: RymHktMnM A351 73,6
Error in line 23: P3qofspO S759 73,7
Error in line 30: lJa S316 31,9
